--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,113 +1,92 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+# 2023
+
+@article{zucchetb_gated_2023,
+	title = {Gated recurrent neural networks discover attention},
+	journal = {arXiv preprint arXiv:2309.01775},
+	author = {Zucchet*</b>, <b>Nicolas and Kobayashi*, Seijin and Akram*, Yassir and von Oswald, Johannes and Larcher, Maxime and Steger, Angelika and Sacramento, João},
+	year = {2023},
+  selected={true},
+  pdf={https://arxiv.org/pdf/2309.01775},
+  thread={https://x.com/NicolasZucchet/status/1755925788648739276},
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{von_oswald_uncovering_2023,
+	title = {Uncovering mesa-optimization algorithms in transformers},
+	journal = {arXiv preprint arXiv:2309.05858},
+	author = {von Oswald*, Johannes and Niklasson*, Eyvind and Schlegel*, Maximilian and Kobayashi, Seijin and Zucchet</b>, <b>Nicolas and Scherrer, Nino and Miller, Nolan and Sandler, Mark and Vladymyrov, Max and Pascanu, Razvan and Sacramento, João},
+	year = {2023},
+  pdf={https://arxiv.org/pdf/2309.05858},
+  thread={https://x.com/oswaldjoh/status/1701873029100241241},
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@inproceedings{zucchetb_online_2023,
+	title = {Online learning of long-range dependencies},
+	booktitle = {Advances in {Neural} {Information} {Processing} {Systems}},
+	author = {Zucchet*</b>, <b>Nicolas and Meier*, Robert and Schug*, Simon and Mujika, Asier and Sacramento, João},
+	year = {2023},
+	keywords = {Computer Science - Machine Learning, Computer Science - Neural and Evolutionary Computing},
+  selected={true},
+  code={https://github.com/NicolasZucchet/Online-learning-LR-dependencies},
+  pdf={https://arxiv.org/pdf/2305.15947},
+  poster={poster_online_learning_long_range_dependencies.pdf},
+  thread={https://x.com/NicolasZucchet/status/1733119036140249579},
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  selected={true}
+# 2022
+
+@inproceedings{meulemans_least-control_2022,
+	title = {The least-control principle for local learning at equilibrium},
+	booktitle = {Advances in {Neural} {Information} {Processing} {Systems} (Oral)},
+	author = {Meulemans*, Alexander and Zucchet*</b>, <b>Nicolas and Kobayashi*, Seijin and von Oswald, Johannes and Sacramento, João},
+	year = {2022},
+  selected={true},
+  pdf={https://arxiv.org/pdf/2207.01332},
+  code={https://github.com/seijin-kobayashi/least-control},
+  poster={poster_lcp.pdf},
+  thread={https://x.com/NicolasZucchet/status/1591041946856062976},
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@inproceedings{benzing_random_2022,
+	title = {Random initialisations performing above chance and how to find them},
+	booktitle = {Annual {Workshop} on {Optimization} for {Machine} {Learning}},
+	author = {Benzing, Frederik and Schug, Simon and Meier, Robert and von Oswald, Johannes and Akram, Yassir and Zucchet</b>, <b>Nicolas and Aitchison, Laurence and Steger, Angelika},
+	year = {2022},
+	keywords = {Computer Science - Machine Learning},
+  pdf={https://arxiv.org/pdf/2209.07509},
+  thread={https://x.com/ssmonsays/status/1571126507933929481},
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@inproceedings{zucchetb_contrastive_2022,
+	title = {A contrastive rule for meta-learning},
+	booktitle = {Advances in {Neural} {Information} {Processing} {Systems}},
+	author = {Zucchet*</b>, <b>Nicolas and Schug*, Simon and von Oswald*, Johannes and Zhao, Dominic and Sacramento, João},
+	year = {2022},
+	keywords = {Computer Science - Machine Learning, Computer Science - Neural and Evolutionary Computing, Quantitative Biology - Neurons and Cognition},
+  pdf={https://arxiv.org/pdf/2104.01677},
+  poster={poster_cml.png},
+  thread={https://x.com/ssmonsays/status/1585955752854048768},
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{zucchetb_beyond_2022,
+	title = {Beyond backpropagation: bilevel optimization through implicit differentiation and equilibrium propagation},
+	volume = {34},
+	number = {12},
+	journal = {Neural Computation},
+	author = {Zucchet</b>, <b>Nicolas and Sacramento, João},
+	year = {2022},
+  pdf={https://arxiv.org/pdf/2205.03076},
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
+# 2021
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@inproceedings{von_oswald_learning_2021,
+	title = {Learning where to learn: {Gradient} sparsity in meta and continual learning},
+	booktitle = {Advances in {Neural} {Information} {Processing} {Systems}},
+	author = {von Oswald*, Johannes and Zhao*, Dominic and Kobayashi, Seijin and Schug, Simon and Caccia, Massimo and Zucchet</b>, <b>Nicolas and Sacramento, João},
+	year = {2021},
+  pdf={https://arxiv.org/pdf/2110.14402},
 }
