--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,9 +8,9 @@
 	journal = {arXiv preprint arXiv:2405.21064},
 	author = {Zucchet</b>, <b>Nicolas and Orvieto, Antonio},
 	year = {2024},
-	keywords = {Computer Science - Artificial Intelligence, Computer Science - Machine Learning, Mathematics - Optimization and Control},
 	file = {Zucchet and Orvieto - 2024 - Recurrent neural networks vanishing and exploding.pdf:/Users/nicolas/Zotero/storage/CSKYBDYM/Zucchet and Orvieto - 2024 - Recurrent neural networks vanishing and exploding.pdf:application/pdf},
 	selected={true},
+	pdf={https://arxiv.org/pdf/2405.21064},
 }
 
 
@@ -53,10 +53,11 @@
 
 @inproceedings{meulemans_least-control_2022,
 	title = {The least-control principle for local learning at equilibrium},
-	booktitle = {Advances in {Neural} {Information} {Processing} {Systems} (Oral)},
+	booktitle = {Advances in {Neural} {Information} {Processing} {Systems}},
 	author = {Meulemans*, Alexander and Zucchet*</b>, <b>Nicolas and Kobayashi*, Seijin and von Oswald, Johannes and Sacramento, João},
 	year = {2022},
   selected={true},
+  award={Oral and pre-selected for best paper award.},
   pdf={https://arxiv.org/pdf/2207.01332},
   code={https://github.com/seijin-kobayashi/least-control},
   poster={poster_lcp.pdf},
