Add pdf on website

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -44,7 +44,7 @@
 	keywords = {Computer Science - Machine Learning, Computer Science - Neural and Evolutionary Computing},
   selected={true},
   code={https://github.com/NicolasZucchet/Online-learning-LR-dependencies},
-  pdf={https://arxiv.org/pdf/2305.15947},
+  pdf={online_learning_lr_dep.pdf},
   poster={poster_online_learning_long_range_dependencies.pdf},
   thread={https://x.com/NicolasZucchet/status/1733119036140249579},
 }
