--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,17 @@
 ---
 ---
 
+# 2025
+
+@article{zucchet_facts_2025,
+	title = {How language models learn facts? Dynamics, curricula and hallucinations},
+	journal = {arXiv preprint arXiv:2503.21676},
+	author = {Zucchet</b>, <b>Nicolas and Bornschein, Jörg and Chan, Stephanie and Lampinen, Andrew and Pascanu, Razvan and De, Soham},
+	year = {2025},
+	selected={true},
+	pdf={https://arxiv.org/pdf/2503.21676},
+}
+
 # 2024
 
 @article{zucchetb_recurrent_2024,
@@ -22,7 +33,6 @@
 	journal = {arXiv preprint arXiv:2309.01775},
 	author = {Zucchet*</b>, <b>Nicolas and Kobayashi*, Seijin and Akram*, Yassir and von Oswald, Johannes and Larcher, Maxime and Steger, Angelika and Sacramento, João},
 	year = {2023},
-  selected={true},
   pdf={https://arxiv.org/pdf/2309.01775},
   thread={https://x.com/NicolasZucchet/status/1755925788648739276},
 }
