--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,12 +16,15 @@
 
 @article{zucchetb_recurrent_2024,
 	title = {Recurrent neural networks: vanishing and exploding gradients are not the end of the story},
-	journal = {arXiv preprint arXiv:2405.21064},
+	journal = {Advances in {Neural} {Information} {Processing} {Systems}},
 	author = {Zucchet</b>, <b>Nicolas and Orvieto, Antonio},
 	year = {2024},
 	file = {Zucchet and Orvieto - 2024 - Recurrent neural networks vanishing and exploding.pdf:/Users/nicolas/Zotero/storage/CSKYBDYM/Zucchet and Orvieto - 2024 - Recurrent neural networks vanishing and exploding.pdf:application/pdf},
 	selected={true},
 	pdf={https://arxiv.org/pdf/2405.21064},
+	thread={https://x.com/NicolasZucchet/status/1797641762204430725},
+	poster={poster_rnn_not_end_story.pdf},
+	code={https://github.com/NicolasZucchet/Vanishing-and-exploding-gradients-are-not-the-end-of-the-story},
 }
 
 # 2023
